Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39084

Windows: qt_imageFromWinHBITMAP does not convert a HBITMAP correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.1
    • 5.2.1, 5.3.0 RC1
    • Extras: Win
    • None
    • Windows
    • d3d8ade87b74c541cc3baa67b9972d6471864c25 (stable. 26.5.2014, 5.3.1)

      Windows: qt_imageFromWinHBITMAP does not convert a HBITMAP correctly, particularly with respect to the alpha channel.

      Attached is an example that reproduces the problem with an image too.

        1. main.cpp
          0.9 kB
          Andy Shaw
        2. test.bmp
          370 kB
          Andy Shaw
        3. qtbug39084.tar
          380 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes