src/gui/image/qpixmap_win.cpp
@@ -2,8 +2,14 @@ DECL|enumerator|HBitmapAlpha
 DECL|enumerator|HBitmapNoAlpha
 DECL|enumerator|HBitmapPremultipliedAlpha
 DECL|enum|HBitmapFormat
+DECL|function|copyImageData
+DECL|function|copyImageDataCreateAlpha
+DECL|function|getDiBits
+DECL|function|initBitMapInfo
+DECL|function|initBitMapInfoHeader
 DECL|function|qt_createIconMask
 DECL|function|qt_imageFromWinHBITMAP
+DECL|function|qt_imageFromWinIconHBITMAP
 DECL|function|qt_pixmapFromWinHBITMAP
 DECL|function|qt_pixmapFromWinHICON
 DECL|function|qt_pixmapFromWinHICON
